--- a/Simulator/index.html
+++ b/Simulator/index.html
@@ -234,10 +234,7 @@ Questions?  >>  Aheadflank.ai@gmail.com
                 <span>Beta</span>
             </section>
             <nav id="button-bar" class="d-flex flex-column align-items-bottom gap-2 justify-content-end">
-                <!-- Add/Drop Track and Scenario Buttons -->
-                <button id="btn-add-track" class="control-btn selected p-2" data-tooltip="Add New Track">+</button>
-                <button id="btn-drop-track" class="control-btn selected p-2" data-tooltip="Drop Selected Track">-</button>
-                <span class="w-100 border-top border-secondary"></span>
+                <!-- Scenario and Range Controls -->
                 <!-- Button Group 1 -->
                 <!-- <button id="btn-wind" class="control-btn" data-tooltip="Toggle Wind Display">WIND</button>
                 <button id="btn-rmv" class="control-btn" data-tooltip="Toggle Relative Motion Vectors">RM V</button>
@@ -248,9 +245,7 @@ Questions?  >>  Aheadflank.ai@gmail.com
                 <span class="w-100 border-top border-secondary"></span>
                 <!-- Button Group 3 -->
                 <button id="btn-range" class="control-btn selected" data-tooltip="Toggle Radar Range (3, 6, 12, 24 nm)">12.0</button>
-                <!-- Help Button -->
-                <span class="w-100 border-top border-secondary"></span>
-                <button id="btn-help" class="control-btn unselected p-2" data-tooltip="Show Instructions">HELP</button>
+
 
             </nav>
         </section>
@@ -287,33 +282,36 @@ Questions?  >>  Aheadflank.ai@gmail.com
                         </button>
                     </div>
                 </section>
-                <!-- New Scenario Button -->
+                <div id="trk-controls">
+                    <button id="btn-drop-trk" class="sim-control-btn unselected" data-tooltip="Drop Selected Track">- trk</button>
                     <button id="btn-scen" class="sim-control-btn selected" data-tooltip="Generate New Scenario">
                         <svg xmlns="http://www.w3.org/2000/svg" style="width:1em;height:1em;margin:auto;" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/>
                         </svg> New scene
                     </button>
+                    <button id="btn-add-trk" class="sim-control-btn unselected" data-tooltip="Add New Track">+ trk</button>
+                </div>
                 <div id="data-pane" class="d-flex flex-column" >
                     <!-- OwnShip Data -->
                     <div class="data primary" id="ownship-data-container">
                         <p class="font-bold tracking-wide data-title">OwnShip</p>
                         <div class="d-flex flex-column gap-1">
-                            <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Crs</span><span id="ownship-crs" class="data-value editable"></span></div>
-                            <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Spd</span><span id="ownship-spd" class="data-value editable"></span></div>
+                            <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Crs</span><span id="ownship-crs" class="data-value editable" data-tooltip="Edit Course"></span></div>
+                            <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Spd</span><span id="ownship-spd" class="data-value editable" data-tooltip="Edit Speed"></span></div>
                         </div>
                     </div>
                     <!-- Data Panels for selected track will be dynamically inserted here -->
                     <div class="data primary" id="track-data-container">
                          <p class="font-bold tracking-wide data-title">Track <span id="track-id">--</span></p>
                         <div class="d-flex flex-column gap-1">
-                            <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Brg</span><span id="track-brg" class="data-value editable">--</span></div>
-                            <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Rng</span><span id="track-rng" class="data-value editable">--</span></div>
-                            <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Crs</span><span id="track-crs" class="data-value editable">--</span></div>
-                            <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Spd</span><span id="track-spd" class="data-value editable">--</span></div>
+                            <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Brg</span><span id="track-brg" class="data-value editable" data-tooltip="Edit Bearing">--</span></div>
+                            <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Rng</span><span id="track-rng" class="data-value editable" data-tooltip="Edit Range">--</span></div>
+                            <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Crs</span><span id="track-crs" class="data-value editable" data-tooltip="Edit Course">--</span></div>
+                            <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Spd</span><span id="track-spd" class="data-value editable" data-tooltip="Edit Speed">--</span></div>
                         </div>
                     </div>
                     <details class="data secondary collapsible-panel" id="cpa-data-container">
-                        <summary class="collapsible-summary">CPA</summary>
+                        <summary class="collapsible-summary" data-tooltip="Toggle CPA Data">CPA</summary>
                         <div class="d-flex flex-column gap-1">
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Brg</span><span id="cpa-brg" class="data-value text-end">--</span></div>
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Rng</span><span id="cpa-rng" class="data-value text-end">--</span></div>
@@ -329,7 +327,7 @@ Questions?  >>  Aheadflank.ai@gmail.com
                         </div>
                     </div> -->
                     <details class="data secondary collapsible-panel" id="rm-data-container">
-                        <summary class="collapsible-summary">Rel Motion</summary>
+                        <summary class="collapsible-summary" data-tooltip="Toggle Relative Motion">Rel Motion</summary>
                         <div class="d-flex flex-column gap-1">
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Direction RM</span><span id="rm-dir" class="data-value text-end">--</span></div>
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Spd RM</span><span id="rm-spd" class="data-value text-end">--</span></div>
@@ -349,7 +347,7 @@ Questions?  >>  Aheadflank.ai@gmail.com
                         </div>
                     </div> -->
                     <details class="data secondary collapsible-panel" id="wind-data-container">
-                        <summary class="collapsible-summary">Wind</summary>
+                        <summary class="collapsible-summary" data-tooltip="Toggle Wind Data">Wind</summary>
                         <div class="d-flex flex-column gap-1">
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">True</span><span id="wind-true" class="data-value text-end">--</span></div>
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Rel</span><span id="wind-rel" class="data-value text-end">--</span></div>
