--- a/Simulator/index.html
+++ b/Simulator/index.html
@@ -40,6 +40,7 @@
 <body>
 
 <div id="drag-tooltip"></div>
+<div id="tooltip"></div>
 
 <div id="mobile-blocker" class="mobile-blocker">
   Maneuver is currently not compatible with cell-phone browsers. <br> <br>
@@ -234,7 +235,10 @@ Questions?  >>  Aheadflank.ai@gmail.com
                 <span>Beta</span>
             </section>
             <nav id="button-bar" class="d-flex flex-column align-items-bottom gap-2 justify-content-end">
-                <!-- Scenario and Range Controls -->
+                <!-- Add/Drop Track and Scenario Buttons -->
+                <button id="btn-add-track" class="control-btn selected p-2" data-tooltip="Add New Track">+</button>
+                <button id="btn-drop-track" class="control-btn selected p-2" data-tooltip="Drop Selected Track">-</button>
+                <span class="w-100 border-top border-secondary"></span>
                 <!-- Button Group 1 -->
                 <!-- <button id="btn-wind" class="control-btn" data-tooltip="Toggle Wind Display">WIND</button>
                 <button id="btn-rmv" class="control-btn" data-tooltip="Toggle Relative Motion Vectors">RM V</button>
@@ -245,7 +249,9 @@ Questions?  >>  Aheadflank.ai@gmail.com
                 <span class="w-100 border-top border-secondary"></span>
                 <!-- Button Group 3 -->
                 <button id="btn-range" class="control-btn selected" data-tooltip="Toggle Radar Range (3, 6, 12, 24 nm)">12.0</button>
-
+                <!-- Help Button -->
+                <span class="w-100 border-top border-secondary"></span>
+                <button id="btn-help" class="control-btn unselected p-2" data-tooltip="Show Instructions">HELP</button>
 
             </nav>
         </section>
@@ -282,15 +288,12 @@ Questions?  >>  Aheadflank.ai@gmail.com
                         </button>
                     </div>
                 </section>
-                <div id="trk-controls">
-                    <button id="btn-drop-trk" class="sim-control-btn unselected" data-tooltip="Drop Selected Track">- trk</button>
+                <!-- New Scenario Button -->
                     <button id="btn-scen" class="sim-control-btn selected" data-tooltip="Generate New Scenario">
                         <svg xmlns="http://www.w3.org/2000/svg" style="width:1em;height:1em;margin:auto;" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/>
-                        </svg> New scene
+                        </svg> New scenario
                     </button>
-                    <button id="btn-add-trk" class="sim-control-btn unselected" data-tooltip="Add New Track">+ trk</button>
-                </div>
                 <div id="data-pane" class="d-flex flex-column" >
                     <!-- OwnShip Data -->
                     <div class="data primary" id="ownship-data-container">
@@ -311,7 +314,7 @@ Questions?  >>  Aheadflank.ai@gmail.com
                         </div>
                     </div>
                     <details class="data secondary collapsible-panel" id="cpa-data-container">
-                        <summary class="collapsible-summary" data-tooltip="Toggle CPA Data">CPA</summary>
+                        <summary class="collapsible-summary" data-tooltip="Reveal CPA Data & Show Radar Symbols">CPA</summary>
                         <div class="d-flex flex-column gap-1">
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Brg</span><span id="cpa-brg" class="data-value text-end">--</span></div>
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Rng</span><span id="cpa-rng" class="data-value text-end">--</span></div>
@@ -327,7 +330,7 @@ Questions?  >>  Aheadflank.ai@gmail.com
                         </div>
                     </div> -->
                     <details class="data secondary collapsible-panel" id="rm-data-container">
-                        <summary class="collapsible-summary" data-tooltip="Toggle Relative Motion">Rel Motion</summary>
+                        <summary class="collapsible-summary" data-tooltip="Reveal RM Data & Show Radar Symbols">Rel Motion</summary>
                         <div class="d-flex flex-column gap-1">
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Direction RM</span><span id="rm-dir" class="data-value text-end">--</span></div>
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Spd RM</span><span id="rm-spd" class="data-value text-end">--</span></div>
@@ -347,7 +350,7 @@ Questions?  >>  Aheadflank.ai@gmail.com
                         </div>
                     </div> -->
                     <details class="data secondary collapsible-panel" id="wind-data-container">
-                        <summary class="collapsible-summary" data-tooltip="Toggle Wind Data">Wind</summary>
+                        <summary class="collapsible-summary" data-tooltip="Reveal Wind Data & Show Radar Symbols">Wind</summary>
                         <div class="d-flex flex-column gap-1">
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">True</span><span id="wind-true" class="data-value text-end">--</span></div>
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Rel</span><span id="wind-rel" class="data-value text-end">--</span></div>
