--- a/Simulator/index.html
+++ b/Simulator/index.html
@@ -233,26 +233,7 @@ Questions?  >>  Aheadflank.ai@gmail.com
                 Maneuver <br/>
                 <span>Beta</span>
             </section>
-            <nav id="button-bar" class="d-flex flex-column align-items-bottom gap-2 justify-content-end">
-                <!-- Add/Drop Track and Scenario Buttons -->
-                <button id="btn-add-track" class="control-btn selected p-2" data-tooltip="Add New Track">+</button>
-                <button id="btn-drop-track" class="control-btn selected p-2" data-tooltip="Drop Selected Track">-</button>
-                <span class="w-100 border-top border-secondary"></span>
-                <!-- Button Group 1 -->
-                <!-- <button id="btn-wind" class="control-btn" data-tooltip="Toggle Wind Display">WIND</button>
-                <button id="btn-rmv" class="control-btn" data-tooltip="Toggle Relative Motion Vectors">RM V</button>
-                <button id="btn-cpa" class="control-btn" data-tooltip="Toggle CPA Information">CPA</button>
-                <span class="w-100 border-top border-secondary"></span> -->
-                <!-- Button Group 2 -->
-                <button id="btn-vector-time" class="control-btn selected" data-tooltip="Toggle Vector Time (3, 15, 30 min)">15</button>
-                <span class="w-100 border-top border-secondary"></span>
-                <!-- Button Group 3 -->
-                <button id="btn-range" class="control-btn selected" data-tooltip="Toggle Radar Range (3, 6, 12, 24 nm)">12.0</button>
-                <!-- Help Button -->
-                <span class="w-100 border-top border-secondary"></span>
-                <button id="btn-help" class="control-btn unselected p-2" data-tooltip="Show Instructions">HELP</button>
-
-            </nav>
+            <nav id="button-bar" class="d-flex flex-column align-items-bottom gap-2 justify-content-end"></nav>
         </section>
 
 	    <section id="simulator">
@@ -313,7 +294,7 @@ Questions?  >>  Aheadflank.ai@gmail.com
                         </div>
                     </div>
                     <details class="data secondary collapsible-panel" id="cpa-data-container">
-                        <summary class="collapsible-summary">CPA</summary>
+                        <summary class="collapsible-summary" data-tooltip="Reveal CPA Data &amp; Show Radar Symbols">CPA</summary>
                         <div class="d-flex flex-column gap-1">
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Brg</span><span id="cpa-brg" class="data-value text-end">--</span></div>
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Rng</span><span id="cpa-rng" class="data-value text-end">--</span></div>
@@ -329,7 +310,7 @@ Questions?  >>  Aheadflank.ai@gmail.com
                         </div>
                     </div> -->
                     <details class="data secondary collapsible-panel" id="rm-data-container">
-                        <summary class="collapsible-summary">Rel Motion</summary>
+                        <summary class="collapsible-summary" data-tooltip="Reveal RM Data &amp; Show Radar Symbols">Rel Motion</summary>
                         <div class="d-flex flex-column gap-1">
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Direction RM</span><span id="rm-dir" class="data-value text-end">--</span></div>
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Spd RM</span><span id="rm-spd" class="data-value text-end">--</span></div>
@@ -349,7 +330,7 @@ Questions?  >>  Aheadflank.ai@gmail.com
                         </div>
                     </div> -->
                     <details class="data secondary collapsible-panel" id="wind-data-container">
-                        <summary class="collapsible-summary">Wind</summary>
+                        <summary class="collapsible-summary" data-tooltip="Reveal Wind Data &amp; Show Radar Symbols">Wind</summary>
                         <div class="d-flex flex-column gap-1">
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">True</span><span id="wind-true" class="data-value text-end">--</span></div>
                             <div class="d-flex justify-content-between align-items-baseline"><span class="data-label">Rel</span><span id="wind-rel" class="data-value text-end">--</span></div>
