Increase track control size and update layout

--- a/Simulator/index.html
+++ b/Simulator/index.html
@@ -287,7 +287,7 @@ Questions?  >>  Aheadflank.ai@gmail.com
                     <div class="data primary" id="track-data-container">
                         <div class="d-flex justify-content-between align-items-start">
                             <p class="font-bold tracking-wide data-title mb-0">Track <span id="track-id">--</span></p>
-                            <div id="track-controls" class="d-flex flex-column ms-auto" style="gap:10px;">
+                            <div id="track-controls" class="d-flex flex-row ms-auto" style="gap:13px;">
                                 <button id="btn-add-track"  title="Add new track">+</button>
                                 <button id="btn-drop-track" title="Drop this track">&ndash;</button>
                             </div>
