Add order tooltip and dark orange vector

--- a/Simulator/index.html
+++ b/Simulator/index.html
@@ -40,6 +40,7 @@
 <body>
 
 <div id="drag-tooltip"></div>
+<div id="order-tooltip"></div>
 
 <div id="mobile-blocker" class="mobile-blocker">
   Maneuver is currently not compatible with cell-phone browsers. <br> <br>
