--- a/Simulator/index.html
+++ b/Simulator/index.html
@@ -235,6 +235,27 @@ Questions?  >>  Aheadflank.ai@gmail.com
                 <span>Beta</span>
             </section>
             <nav id="button-bar" class="d-flex flex-column align-items-bottom gap-2 justify-content-end"></nav>
+            <button id="btn-settings" data-tooltip="Settings">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" style="width:1em;height:1em;margin:auto;">
+                    <path d="M19.14,12.94a7.12,7.12,0,0,0,0-1.88l2.11-1.65a.48.48,0,0,0,.12-.61l-2-3.46a.48.48,0,0,0-.58-.22l-2.49,1a7.28,7.28,0,0,0-1.63-.94l-.38-2.65a.48.48,0,0,0-.47-.41H9.78a.48.48,0,0,0-.47.41L9,5.18a7.28,7.28,0,0,0-1.63.94l-2.49-1a.48.48,0,0,0-.58.22l-2,3.46a.48.48,0,0,0,.12.61L4.53,11.06a7.12,7.12,0,0,0,0,1.88L2.42,14.59a.48.48,0,0,0-.12.61l2,3.46a.48.48,0,0,0,.58.22l2.49-1a7.28,7.28,0,0,0,1.63.94l.38,2.65a.48.48,0,0,0,.47.41h4.44a.48.48,0,0,0,.47-.41l.38-2.65a7.28,7.28,0,0,0,1.63-.94l2.49,1a.48.48,0,0,0,.58-.22l2-3.46a.48.48,0,0,0-.12-.61ZM12,15.5A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"/>
+                </svg>
+            </button>
+            <div id="settings-drawer" class="settings-drawer">
+                <div class="drawer-item">
+                    <span>Polar</span>
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="toggle-polar" checked />
+                        <span class="slider"></span>
+                    </label>
+                </div>
+                <div class="drawer-item">
+                    <span>IDs</span>
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="toggle-track-nums" checked />
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
         </section>
 
 	    <section id="simulator">
