Add settings drawer with gear icon

--- a/Simulator/index.html
+++ b/Simulator/index.html
@@ -235,6 +235,23 @@ Questions?  >>  Aheadflank.ai@gmail.com
                 <span>Beta</span>
             </section>
             <nav id="button-bar" class="d-flex flex-column align-items-bottom gap-2 justify-content-end"></nav>
+            <div id="settings-container">
+                <button id="btn-settings" class="control-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path d="M19.14 12.94c.04-.3.06-.61.06-.94s-.02-.64-.06-.94l2.03-1.58c.18-.14.23-.41.11-.61l-1.92-3.32a.5.5 0 0 0-.6-.22l-2.39.96a7.05 7.05 0 0 0-1.63-.94l-.36-2.54a.5.5 0 0 0-.5-.42h-3.84a.5.5 0 0 0-.5.42l-.36 2.54a7.05 7.05 0 0 0-1.63.94l-2.39-.96a.5.5 0 0 0-.6.22l-1.92 3.32a.5.5 0 0 0 .11.61l2.03 1.58c-.04.3-.06.62-.06.94s.02.64.06.94L2.3 14.52a.5.5 0 0 0-.11.61l1.92 3.32c.12.2.37.28.6.22l2.39-.96c.5.38 1.04.7 1.63.94l.36 2.54c.04.23.25.42.5.42h3.84c.25 0 .46-.19.5-.42l.36-2.54c.59-.24 1.13-.56 1.63-.94l2.39.96c.23.06.48-.02.6-.22l1.92-3.32a.5.5 0 0 0-.11-.61l-2.03-1.58zM12 15.5A3.5 3.5 0 1 1 12 8a3.5 3.5 0 0 1 0 7.5z"/>
+                    </svg>
+                </button>
+                <div id="settings-drawer" class="d-flex flex-column">
+                    <label class="toggle">Polar Plot
+                        <input id="toggle-polar" type="checkbox" checked>
+                        <span class="slider"></span>
+                    </label>
+                    <label class="toggle">Track IDs
+                        <input id="toggle-tracknum" type="checkbox" checked>
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
         </section>
 
 	    <section id="simulator">
