Improve fullscreen UX on mobile

--- a/Simulator/index.html
+++ b/Simulator/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="manifest" href="manifest.json">
     <title>Maneuver: Simulator</title>
     <link rel="icon" type="image/svg+xml" href="favicons.svg">
     
@@ -235,7 +238,7 @@ Questions?  >>  Aheadflank.ai@gmail.com
                 <span>Beta</span>
             </section>
             <nav id="button-bar" class="d-flex flex-column align-items-bottom gap-2 justify-content-end"></nav>
-            <button id="btn-fullscreen">
+            <button id="btn-fullscreen" aria-label="Enter full screen" title="Enter full screen" data-state="enter">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M4 4h6v2H6v4H4V4m10 0h6v6h-2V6h-4V4m6 10v6h-6v-2h4v-4h2m-10 4h4v2H4v-6h2v4z"/>
                 </svg>
